# small-vessel-disease-markers

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.txt
autoencoder/: autoencoder_inference_functions.py  autoencoder_model.py  autoencoder_preproc_dataset.py  evaluate_autoencoder.py  evaluate_latents.py  generate_ae_latent_prospective.csv  generate_ae_latent_prospective.py  train_autoencoder.py
autoencoder/latents_validation/: a_load_additional_prospective_data.py  b_evaluate_latents.py
autoencoder/outputs/svd_ae_output_20260109_2329/: 20260109_2329_best_model_weights.pt  metrics.json  preproc.json  run_config.json
cluster_analysis/: kmeans_cluster_analysis.csv  kmeans_cluster_analysis.py  kmeans_svd_markers_summary.yml
data_preparation/: load_additional_prospective_data.py  prepare_prospective_data.py  prepare_retrospective_data.py
latent_transform/: compute_pca_nmf.csv  compute_pca_nmf.py
src/svd_marker_tools/: autoencoder_configs.py  config.py  utils.py
