[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "PL", "D", "UP", "C90", "B", "Q", "S"]
ignore = []

[project]
name = "svd_marker_tools"
version = "0.1.0"
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
